<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/menu_workout"
        android:icon="@drawable/ic_fitness"
        android:title="@string/nav_workout" />
    
    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/nav_stats" />
    
    <item
        android:id="@+id/menu_hydration"
        android:icon="@drawable/ic_water"
        android:title="@string/nav_hydration" />
    
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>